test/functions/jplevyak/var_return-2.good
var_return-2.chpl:4: In function 'f':
var_return-2.chpl:5: error: illegal expression to return by ref
